--- a/CV_2/index.html
+++ b/CV_2/index.html
@@ -393,7 +393,7 @@
 						</div>
 					</div> -->
 
-					
+
 				</div>
 
 				<!-- <div class="row">
@@ -494,7 +494,7 @@
 					<div class="col-md-9 col-md-offset-3">
 						<!---------- BEGIN MIXITUP ---------->
 						<div class="row wow slideInRight" data-wow-offset="10">
-							<div class="col-md-12" id="_DuAn_">
+							<div class="col-md-12 _DuAn_">
 								<!-- <div class="col-md-3 _thumbnail_">
 									<a class="_LinkYoutube_" data-fancybox data-type="iframe"
 										data-src="https://www.youtube.com/embed/19LN06_kTJw" href="javascript:;">
@@ -652,240 +652,16 @@
 	<!-- Bootstrap Js CDN -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<!-- My JS -->
-	<script src="../src/data.js"></script>
-	<!-- <script src="js/main.js"></script> -->
+
 
 	<!-- Template -->
-	<script type="text/javascript">
-		console.log(data)
+	<script src="../chooseTemplate.js"></script>
+	<script src="../data.js"></script>
+	<script src="../main.js"></script>
+	<script>
 		var template = ChooseTemplate(2);
-
-		$("._HoTen_").html(` ${data.ThongTinCaNhan.HoTen}`);
-		$("._Email_").html(` ${data.ThongTinCaNhan.Email}`);
-		$("._SoDT_").html(` ${data.ThongTinCaNhan.SoDT}`);
-
-		let thongTinCaNhan = JSON.parse(data.ThongTinCaNhan.Urls);
-		let sum = ""
-		for (let val of thongTinCaNhan) {
-			if (val.type === "LinkedIn") {
-				sum += `<a class="_Linkedin_" href="${val.url}"><i class="fa fa-linkedin-square"></i></a>`
-			}
-			if (val.type === "FaceBook") {
-				sum += `<a class="_Facebook_" href="${val.url}"><i class="fa fa-facebook-square"></i></a>`
-			}
-			if (val.type === "GitHub") {
-				sum += `<a class="_Github_" href="${val.url}"><i class="fa fa-github-square"></i></a>`
-			}
-		}
-		$("._Social_").append(sum);
-
-		//  Hoc Vấn
-		let hocVan = data.DanhSachHocVan;
-		for (let i = 0; i < hocVan.length; i++) {
-			let thoigian = hocVan[i].ThoiGian.split("-")[0] + " - " + hocVan[i].ThoiGian.split("-")[1]
-			$("._HocVan_").append(template.hocVan(thoigian, hocVan[i].TenTruong, hocVan[i].MoTa, hocVan[i].BangCap, hocVan[i].GPA, hocVan[i].ChuyenNganh));
-		}
-
-
-		// Kinh Nghiem
-		let kinhghiems = data.DanhSachKinhNghiem;
-		for (let i = 0; i < kinhghiems.length; i++) {
-			let thoigian = kinhghiems[i].ThoiGian.split("-")[0] + " - " + kinhghiems[i].ThoiGian.split("-")[1]
-			$("._KinhNghiem_").append(template.kinhNghiem(kinhghiems[i].TenCongTy, thoigian, kinhghiems[i].ChucVu, kinhghiems[i].MoTa));
-		}
-
-		// Kĩ năng
-		let kiNang = data.KyNang;
-		let sumArr = [];
-		let arrNgonNgu = [];
-		let arrNgonNguOK = [];
-		let map = new Map();
-		let oldIndex = -1;
-		for (let [key, value] of Object.entries(kiNang)) {
-			if (key !== "NgoaiNgu" && key !== "CongCu") {
-				sumArr = [...sumArr, ...JSON.parse(value)];
-			}
-			if (key === "NgoaiNgu") {
-				arrNgonNgu = [...JSON.parse(value)];
-			}
-		}
-		for (let i = 0; i < arrNgonNgu.length; i++) {
-			if (map.get(arrNgonNgu[i].Ten)) {
-				let res = map.get(arrNgonNgu[i].Ten)
-				for(let val of arrNgonNguOK){
-					if(val.Ten == arrNgonNgu[i].Ten){
-						val.TrinhDo.push(arrNgonNgu[i].TrinhDo)
-					}
-				}
-			} else {
-				map.set(arrNgonNgu[i].Ten, arrNgonNgu[i]);
-				let res = {...arrNgonNgu[i]};
-				let save = res.TrinhDo
-				res.TrinhDo = [];
-				res.TrinhDo.push(save);
-				arrNgonNguOK.push(res);
-			}
-		}
-		// console.log("721:", arrNgonNguOK);
-		let sumNgoaiNgu = "";
-		for(let val of arrNgonNguOK){
-			let sumText = ""
-			for(let val2 of val.TrinhDo){
-				sumText+= `<li><p id="_TenKiNang_">${val2}</p></li>`
-			}
-			sumNgoaiNgu += `
-			<div class="col-md-9 col-md-offset-3" style="margin-top:30px">
-				<h3 class="animated zoomInUp" style="margin-top:0px">${val.Ten}</h3>
-				<p class="animated slideInRight Specialized" style="font-weight:600">
-					<ul style="list-style-type:none; padding:0">
-						${sumText}
-					</ul>
-				</p>
-			</div>
-			`
-		}
-
-
-		for (let val of sumArr) {
-			$("._KiNang_").append(template.kiNang(val.Ten, val.TrinhDo));
-		}
-		$("._KiNang_").append(sumNgoaiNgu)
-
-
-
-		// Dự án
-		let duAn = data.DanhSachDuAn;
-		for (let i = 0; i < kinhghiems.length; i++) {
-			$("#_DuAn_").append(template.duAn(duAn[i].LinkYoutube, duAn[i].LinkHinhAnh));
-			template.chiTietDuAn(i, duAn[i].TieuDe, duAn[i].ViTri, duAn[i].MoTa, duAn[i].KyNang);
-		}
-
-		function ChooseTemplate(template) {
-			const section = {};
-			switch (template) {
-				case 2:
-					return {
-						hocVan: (thoigian, TenTruong, MoTaHocVan, Degree, GPA, Specialized) =>
-							`
-							<div class="row" style="margin-bottom:20px">
-								<div class="col-md-9 col-md-offset-3">
-									<p id="ThoiGian" class="titEdu wow slideInRight"><i class="fa fa-university"></i> ${TenTruong} &nbsp; &nbsp;  ${thoigian}</p>
-									<p id="MoTaHocVan" class="wow slideInRight" data-wow-offset="10">${MoTaHocVan}</p>
-								</div>
-								<div class="col-md-9 col-md-offset-3">
-									<h3 class="animated zoomInUp" style="margin-top:0px">Specialized</h3>
-									<p class="animated slideInRight Specialized" style="font-weight:600">${Specialized}</p>
-								</div>
-								<div class="col-md-9 col-md-offset-3">
-									<h3 class="animated zoomInUp" style="margin-top:0px">Degree</h3>
-									<p class="animated slideInRight Degree" style="font-weight:600">${Degree}</p>
-								</div>
-								<div class="col-md-9 col-md-offset-3">
-									<h3 class="animated zoomInUp" style="margin-top:0px">GPA</h3>
-									<p class="animated slideInRight GPA" style="font-weight:600">${GPA}</p>
-								</div>
-							</div>
-						`,
-
-						kinhNghiem: (TenCongTy, ThoiGian, ChucVu, MoTa) =>
-							`
-						<div class="col-md-9 col-md-offset-3">
-								<h3 id="_TenCongTy_" class="wow zoomInUp" data-wow-offset="10">${TenCongTy} &nbsp; &nbsp;  ${ThoiGian}</h3>
-								<p id="_ChucVu_" class="titWork wow slideInRight"><i class="fa fa-briefcase"></i> ${ChucVu}</p>
-								<p id="_MoTa_" class="wow slideInRight" data-wow-offset="10">${MoTa}</p>
-						</div>
-						
-        			`,
-						kiNang: (TenKiNang, TrinhDoKiNang) =>
-							`
-						<div class="col-md-9 col-md-offset-3">
-               				<div class="row rowSkl">
-                    			<div class="col-md-4">
-                        			<p id="_TenKiNang_">${TenKiNang}</p>
-                    			</div>
-								<div class="col-md-8">
-									<div class="progress wow bounceInRight" data-wow-offset="10">
-										<div class="progress-bar progress-bar-info progress-bar-striped active"
-											role="progressbar" style="width:${TrinhDoKiNang}%"><span id="_TrinhDoKiNang_">${TrinhDoKiNang}%</span>
-										</div>
-									</div>
-								</div>
-                			</div>
-						</div>
-					`,
-
-
-						duAn: (LinkYoutube, LinkHinhAnh) => `
-							<div class="col-md-3 _thumbnail_">
-                				<a class="_LinkYoutube_" data-fancybox data-type="iframe"
-                    			data-src=${LinkYoutube} href="javascript:;">
-                    			<img id="_LinkHinhAnh_" class="img-rounded"
-                        		src=${LinkHinhAnh}
-                        		alt="project6" style="width:100%">
-                				</a>
-							</div>
-						`,
-
-						chiTietDuAn: (i, TieuDe, ViTri, MoTa, KyNang) => {
-							divKyNang = ""
-							for (let val of KyNang.split(",")) {
-								if (val !== "") {
-									divKyNang += `
-										<div class="col-md-6">
-											<li>${val}</li>
-										</div>
-									`
-								}
-							}
-							customContent =
-								`
-							<div class='customHTML' style="width: 100%; padding: 30px">
-								<div style="margin-left: 10px;margin-right: 10px;">
-									<p style="text-align: center; font-size: 20px;
-									font-weight: 600;">${TieuDe}</p>
-									<span style="display:block; text-align:center">${ViTri}</span>
-									<hr style="border-top: 1px solid black;marigin-top:0;opacity=0.4"/>
-									<div class="row">
-										<p class="col-md-12" style="font-weight:600;margin-top:30px">SKills</p>
-										<ul>
-											${divKyNang}
-										</ul>
-
-										<p class="col-md-12" style="font-weight:600;margin-top:30px">Description</p>
-										<div class="col-md-12">
-											${MoTa}
-										</div>
-
-									</div>
-
-								</div>
-							</div>
-							`
-							return customIframe(i, customContent);
-						},
-					};
-
-				case 1:
-					break;
-
-				default:
-					break;
-			}
-		}
-
-
-		function customIframe(i, customContent) {
-			$($("._LinkYoutube_")[i]).fancybox({
-				afterShow: function () {
-					$(".fancybox-content").css({ "width": "100%", "display": "flex", "overflow-y": "scroll", "height": "100vh" })
-					$(".fancybox-content iframe").css({ "width": "100%", "display": "flex" })
-					$('.fancybox-content').append(customContent);
-				}
-			});
-		}
-
+		RunCV();
 	</script>
-
 
 
 </body>
