--- a/CV_1/index.html
+++ b/CV_1/index.html
@@ -284,7 +284,7 @@
             <!---------------------------END EDUCATOR ------------------------------>
 
             <!---------------------------BEGIN SKILLS ------------------------------>
-            <section class="secSkills" id="skills">
+            <section class="secSkills" id="skills" style="padding-bottom:30px">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4"></div>
