--- a/CV_6/index.html
+++ b/CV_6/index.html
@@ -110,8 +110,10 @@
 	<header id="header" class="container-fluid">
 		<div class="header_overlay"></div>
 		<div class="container jumbotron text-center">
-			<h1 class="fadeInDown wow delay-03s animated" ><span class="_HoTen_" ></spanclass="_HoTen_"></h1>
-			<p class="fadeInDown wow delay-04s animated">D &nbsp; e &nbsp; v &nbsp; e &nbsp; l &nbsp; o &nbsp; p &nbsp; e &nbsp; r
+			<h1 class="fadeInDown wow delay-03s animated"><span class="_HoTen_"></span>
+			</h1>
+			<p class="fadeInDown wow delay-04s animated">D &nbsp; e &nbsp; v &nbsp; e &nbsp; l &nbsp; o &nbsp; p &nbsp;
+				e &nbsp; r
 			</p>
 			<!--<a class="btn" href="#" title="">Tell Me More</a>-->
 			<div class="banner_social fadeInDown wow delay-05s " id="_MangXaHoi_">
@@ -138,7 +140,7 @@
 						time and Guarantee 100% Satisfaction and Quality.
 					</p>
 					<div style="display: flex;flex-direction: column;">
-						
+
 						<div style="align-items: flex-end;">
 							<a href="#" class="btn btn-default btn-lg"><i class="fa fa-paper-plane"></i>Send Me
 								Message</a>
@@ -150,8 +152,8 @@
 				</div>
 			</div>
 			<div class="col-sm-4">
-				<div class="photo text-center wow fadeInUp delay-03s animated">
-					<img src="img/img-photo.jpg" alt="" class="img-fluid img-thumbnail">
+				<div class="photo text-center wow fadeInUp delay-03s animated _Avatar_">
+					<img src="" alt="" class="img-fluid img-thumbnail">
 				</div>
 				<div class="personal_detail wow fadeInUp delay-07s animated">
 					<ul>
@@ -177,7 +179,7 @@
 		<h1 class="text-center wow fadeInUp delay-02s animated">Work History</h1>
 		<div class="row">
 			<div class="col-lg-12">
-				<ul class="resume" id="_KinhNghiem_">
+				<ul class="resume _KinhNghiem_">
 				</ul>
 			</div>
 		</div>
@@ -186,15 +188,8 @@
 	<section id="skill">
 		<h1 class="text-center wow fadeInUp delay-02s animated">Skill</h1>
 		<div class="container skill-progress">
-			<div class="row" id="_KiNang_">
+			<div class="row _KiNang_">
 
-			</div>
-
-			<h1 class="text-center wow fadeInUp delay-02s animated">Language</h1>
-			<div class="container skill-progress">
-				<div class="row" id="_NgonNgu_">
-				
-				</div>
 			</div>
 		</div>
 	</section>
@@ -209,7 +204,7 @@
 			</div>
 		</div>
 		<div class="container">
-			<div class="row popup-gallery container2 wow fadeInUp" id="_DuAn_">
+			<div class="row popup-gallery container2 wow fadeInUp _DuAn_">
 
 			</div>
 		</div>
@@ -256,8 +251,8 @@
 					</div>
 					<div class="col-md-3 wow fadeInRight">
 						<address>
-							<p><i style="color:#FF9800" class="fa fa-phone" ></i><span class="_SoDT_"></span></p>
-							<p><i style="color:#FF9800" class="fa fa-envelope-o" ></i><span class="_Email_"></span>
+							<p><i style="color:#FF9800" class="fa fa-phone"></i><span class="_SoDT_"></span></p>
+							<p><i style="color:#FF9800" class="fa fa-envelope-o"></i><span class="_Email_"></span>
 							</p>
 						</address>
 					</div>
@@ -307,12 +302,7 @@
 
 
 	<script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
-	<!-- FANCY BOX -->
-	<script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
-	<script src="fancybox/dist/jquery.fancybox.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
-	<script src="../src/data.js"></script>
-	<script src="js/main.js"></script>
+
 
 
 	<!-- <script type="text/javascript">
@@ -351,6 +341,17 @@
 				$('body,html').animate({ scrollTop: 0 }, duration);
 			});
 		});
+	</script>
+	<!-- FANCY BOX -->
+	<script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="fancybox/dist/jquery.fancybox.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
+	<script src="../chooseTemplate.js"></script>
+	<script src="../data.js"></script>
+	<script src="../main.js"></script>
+	<script>
+		var template = ChooseTemplate(5);
+		RunCV();
 	</script>
 
 
