--- a/CVoffline/srt-resume.html
+++ b/CVoffline/srt-resume.html
@@ -1,67 +1,108 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
+
 <head>
+  <title class="_HoTen_">Jonathan Doe</title>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-	<title class="_HoTen_">Jonathan Doe</title>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
 
-	<meta name="keywords" content="" />
-	<meta name="description" content="" />
+  <link rel="stylesheet" type="text/css"
+    href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" />
+  <link rel="stylesheet" type="text/css" href="resume.css" media="all" />
+  <style type="text/css" media="print">
+    @page {
+      margin: 0;
+    }
 
-	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" /> 
-	<link rel="stylesheet" type="text/css" href="resume.css" media="all" />
+    @media print {
+      @page {
+        margin: 0;
+      }
+
+      body {
+        margin: 1.6cm;
+      }
+    }
+  </style>
+
+
 
 </head>
+
 <body>
 
-<div id="doc2" class="yui-t7">
-	<div id="inner">
-	
-		<div id="hd">
-			<div class="yui-gc">
-				<div class="yui-u first">
-					<h1 class="_HoTen_" >Jonathan Doe</h1>
-					<h2 class= "_ChucVu_">Web Designer, Director</h2>
-				</div>
+  <div class="overlay">
+      <p>DOWLOADING...
 
-				<div class="yui-u">
-					<div class="contact-info">
-						<h3><a id="pdf" href="#">Download PDF</a></h3>
-						<h3><a href="mailto:name@yourdomain.com" class="_Email_">name@yourdomain.com</a></h3>
-						<h3 class="_SoDT_">(313) - 867-5309</h3>
-					</div><!--// .contact-info -->
-				</div>
-			</div><!--// .yui-gc -->
-		</div><!--// hd -->
+        <span>Press F5 if not auto download!</span>
+      </p >
+  </div>
+  
+  <div id="doc2" class="yui-t7 canvas_div_pdf">
+    <div id="inner">
+      <div id="hd">
+        <div class="yui-gc">
+          <div class="yui-u first">
+            <h1 class="_HoTen_">Jonathan Doe</h1>
+            <h2 class="_ChucVu_">Web Designer, Director</h2>
+          </div>
 
-		<div id="bd">
-			<div id="yui-main">
-					<div class="yui-b">
+          <div class="yui-u">
+            <div class="contact-info">
 
-					<div class="yui-gf">
-						<div class="yui-u first">
-							<h2>Profile</h2>
-						</div>
-						<div class="yui-u">
-							<p id="_SoLuocBanThan_"class="enlarge">
-								Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-						</div>
-					</div>
+              <a href="./srt.png" download>
+                aaaa
+              </a>
 
-					<div class="yui-gf">
-						<div class="yui-u first">
-							<h2>Skills</h2>
-						</div>
-						<div class="yui-u" id="_KiNang_">
-							<ul>
-								<li class="Proficient"><h3>Proficient:</h3></li>
-								<li class="Familiar"><h3>Familiar: </h3></li>
-								<li class="Languages">
-									<h3>Languages:</h3>
-		
-								</li>
-							</ul>
-							<!-- <div class="talent">
+              <h3>
+                <a href="mailto:name@yourdomain.com" class="_Email_">name@yourdomain.com</a>
+              </h3>
+              <h3 class="_SoDT_">(313) - 867-5309</h3>
+            </div>
+            <!--// .contact-info -->
+          </div>
+        </div>
+        <!--// .yui-gc -->
+      </div>
+      <!--// hd -->
+
+      <div id="bd">
+        <div id="yui-main">
+          <div class="yui-b">
+            <div class="yui-gf">
+              <div class="yui-u first">
+                <h2>Profile</h2>
+              </div>
+              <div class="yui-u">
+                <p id="_SoLuocBanThan_" class="enlarge">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy text ever since the 1500s, when an unknown
+                  printer took a galley of type and scrambled it to make a
+                  type specimen book.
+                </p>
+              </div>
+            </div>
+
+            <div class="yui-gf">
+              <div class="yui-u first">
+                <h2>Skills</h2>
+              </div>
+              <div class="yui-u" id="_KiNang_">
+                <ul>
+                  <li class="Proficient">
+                    <h3>Proficient:</h3>
+                  </li>
+                  <li class="Familiar">
+                    <h3>Familiar:</h3>
+                  </li>
+                  <li class="Languages">
+                    <h3>Languages:</h3>
+                  </li>
+                </ul>
+                <!-- <div class="talent">
 								<h3>HTML</h3>
 							</div>  
 
@@ -80,71 +121,106 @@
 							<div class="talent">
 								<h3>HTML</h3>
 							</div>   -->
-						</div>
-							
-						</div>
-					</div><!--// .yui-gf -->
+              </div>
+            </div>
+          </div>
+          <!--// .yui-gf -->
 
-					
+          <div class="yui-gf">
+            <div class="yui-u first">
+              <h2>Experience</h2>
+            </div>
+            <!--// .yui-u -->
 
+            <div class="yui-u" id="_KinhNghiem_"></div>
+            <!--// .yui-u -->
+          </div>
+          <!--// .yui-gf -->
 
+          <div class="yui-gf">
+            <div class="yui-u first">
+              <h2>Projects</h2>
+            </div>
+            <!--// .yui-u -->
 
+            <div class="yui-u" id="_ChiTietDuAn_"></div>
+            <!--// .yui-u -->
+          </div>
+          <!--// .yui-gf -->
 
-					<div class="yui-gf">
-	
-						<div class="yui-u first">
-							<h2>Experience</h2>
-						</div><!--// .yui-u -->
-
-						<div class="yui-u" id="_KinhNghiem_">
-
-
-						</div><!--// .yui-u -->
-					</div><!--// .yui-gf -->
-
-					<div class="yui-gf">
-	
-						<div class="yui-u first">
-							<h2>Projects</h2>
-						</div><!--// .yui-u -->
-
-						<div class="yui-u" id="_ChiTietDuAn_">
-
-
-						</div><!--// .yui-u -->
-					</div><!--// .yui-gf -->
-
-
-					<div class="yui-gf last">
-						<div class="yui-u first">
-							<h2>Education</h2>
-						</div>
-						<div class="yui-u" id="_HocVan_">
-							<!-- <h2>Indiana University - Bloomington, Indiana</h2>
+          <div class="yui-gf last">
+            <div class="yui-u first">
+              <h2>Education</h2>
+            </div>
+            <div class="yui-u" id="_HocVan_">
+              <!-- <h2>Indiana University - Bloomington, Indiana</h2>
 							<h3  style="margin-bottom: 20px;">Dual Major, Economics and English &mdash; <strong>4.0 GPA</strong> </h3> -->
-						</div>
-					</div><!--// .yui-gf -->
+            </div>
+          </div>
+          <!--// .yui-gf -->
+        </div>
+        <!--// .yui-b -->
+      </div>
+      <!--// yui-main -->
+    </div>
+    <!--// bd -->
+
+    <div id="ft">
+        <p class="_HoTen_">
+          Jonathan Doe &mdash;
+          <a class="_Email_" href="mailto:name@yourdomain.com"
+            >name@yourdomain.com</a
+          >
+          &mdash;<span class="_SoDT_"> (313) - 867-5309</span>
+        </p>
+      </div>
+    <!--// footer -->
+  </div>
+  <!-- // inner -->
+
+  <!--// doc -->
+
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.js"
+    integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI=" crossorigin="anonymous"></script>
+
+  <!-- DOWLOAD PDF -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.5/dist/html2canvas.min.js"></script>
+
+  <script src="../data.js"></script>
+  <script src="./main.js"></script>
+
+  <script>
+    getPDF();
+   
+    function getPDF() {
+      var HTML_Width = $(".canvas_div_pdf").width();
+      var HTML_Height = $(".canvas_div_pdf").height();
+      var top_left_margin = 0;
+      var PDF_Width = HTML_Width + (top_left_margin * 2);
+      var PDF_Height = (PDF_Width * 1.5) + (top_left_margin * 2);
+      var canvas_image_width = HTML_Width;
+      var canvas_image_height = HTML_Height;
+      var totalPDFPages = Math.ceil(HTML_Height / PDF_Height) - 1;
+      html2canvas($(".canvas_div_pdf")[0], { allowTaint: true }).then(function (canvas) {
+        canvas.getContext('2d');
+        var imgData = canvas.toDataURL("image/jpeg", 1.0);
+        var pdf = new jsPDF('p', 'pt', [PDF_Width, PDF_Height]);
+        pdf.addImage(imgData, 'JPG', top_left_margin, top_left_margin, canvas_image_width, canvas_image_height);
+        for (var i = 1; i <= totalPDFPages; i++) {
+          pdf.addPage(PDF_Width, PDF_Height);
+          pdf.addImage(imgData, 'JPG', top_left_margin, -(PDF_Height * i) + (top_left_margin * 4), canvas_image_width, canvas_image_height);
+        }
+        pdf.save("myCV.pdf");
+
+      });
+    };
+  </script>
 
 
-				</div><!--// .yui-b -->
-			</div><!--// yui-main -->
-		</div><!--// bd -->
 
-		<div id="ft">
-			<p class="_HoTen_">Jonathan Doe &mdash; <a class="_Email_" href="mailto:name@yourdomain.com">name@yourdomain.com</a> &mdash;<span class="_SoDT_"> (313) - 867-5309</span></p>
-		</div><!--// footer -->
-
-	</div><!-- // inner -->
-	<script
-	src="https://code.jquery.com/jquery-3.4.1.slim.js"
-	integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI="
-	crossorigin="anonymous"></script>
-
-		<script src="../data.js"></script>
-		<script src="./main.js"></script>
-</div><!--// doc -->
 
 
 </body>
-</html>
 
+</html>
